--- a/index.html
+++ b/index.html
@@ -13,27 +13,63 @@
         <header class="header-page">
             <div class="title-fixed">
                 <div class="logo-page">
-                    
                 </div>
                 <div  class="job-decs-page">
-                    <h1>FullStack Developer</h1>
+                    <h1>FULLSTACK DEVELOPER</h1>
                     <h2></h2>
                 </div>
             </div>
         </header>
         <section class="body-page">
-            <div style="padding: 10px; margin-bottom:10px;"><h1 style="color: grey;">Projects</h1></div>
-            <div class="body-proyect-page">
-                <a href="https://responsive-item.vercel.app/" target="_blank"  >
-                    <img style="width: 100%; max-height: 400px;" src="./images/proyect1.png" alt="project-1" srcset="">
-                </a>
+        <div class="project-layout">
+            <div class="body-project-title"><h1 style="color: grey;">PROJECTS</h1></div>
+            <div class="body-project-page">
+                <div class="grid-container">
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+                    <div class="grid-item"><img src="https://placehold.it/960x540" /></div>
+
+                </div>
             </div>
-            <div class="body-proyect-page"></div>
-        </section>
+<!--        
+            <div id="slider-k">
+                <div class="frame-k">
+                    <a href="https://responsive-item.vercel.app/" target="_blank">
+                        <img
+                        style="
+                        width: 100%;
+                        height: 100%;
+                        background-image: url('./images/project1.png');
+                        background-position: center;
+                        background-size: cover;"
+                        src="" alt="" />
+                    </a>
+                </div>
+                <div class="frame-k">
+                    <a href="https://page-frontend.vercel.app/" target="_blank">
+                        <img style="
+                        width: 100%;
+                        height: 100%;
+                        background-image: url('./images/preject2.png');
+                        background-position: center;
+                        background-size: cover;" src="" alt="" />
+                    </a>
+                </div>
+            </div> -->
+        </div>
+    </section>
         <div class="info-page">
             <div class="info-dimention info-image"></div>
             <div class="info-dimention info-descrp">
-                
                 <h1>
                     Oh hello!
                     I'm Yefferson Montes.
@@ -45,8 +81,8 @@
                 <h3></h3>
             </div>
         </div>
-
         <section style="width: 100%;" >
+
             <div class="contactWrapper">
                 <div id="contact">
                     <article>
@@ -65,16 +101,15 @@
                             <h2>Networks</h2>
                             <p>Give me a follow on these sites</p>
                             <ul>
-                                <li><a href="https://github.com/crysisyan95" target="_blank"><span></span>Github</a></li>
+                                <li><a href="https://twitter.com/yeffersonmonte2" target="_blank"><span></span>Twitter</a></li>
                             </ul>
                         </div>
                     </article>
                     <div class="clear"></div>
-                </div>
 
+                </div>
             </div>
         </section>
-
         <footer class="footer-page">
             <br>
             Copyright ©  <span id="year"></span> Yefferson Montes - made by crysisyan95.
@@ -82,9 +117,7 @@
             <span style="font-size:0.6em;">HTML5 | CSS3 | JavaScript | Front-End Development | PHP</span>
         </footer>
     </div>
-    <script>
-        document.querySelector('#year').innerText = (new Date(Date.now())).getFullYear();
-    </script>
+    <script src="./js/index.js"></script>
     <script src="./assets/icomoon/svgxuse.js"></script>
 </body>
 </html>
